# internal/entities/image.entity.go
@@ -1,0 +1,6 @@
+package entities
+
+type ImageEntity struct {
+	URL         string `json:"url"`
+	LastUpdated int64  `json:"last_updated"`
+}
